# banshee-license-verifier-plugin

./: AUTHORS  ChangeLog  NEWS  README  autogen.sh  configure.ac
src/: LicenseVerifierConfigPage.cs  LicenseVerifierPlugin.cs  Makefile.am
